# rust-webapp

./: .dockerignore  .lldbinit  Cargo.toml  Dockerfile  README.md  deploy.sh  renovate.json
.github/workflows/: ci.yml  rust-clippy.yml
src/: axum.rs  cfg_type_parameter.rs  cfg_type_parameter_phantom_data.rs  cow.rs  double_mut.rs  future.rs  healthcheck.rs  higher_rank_trait_bounds.rs  inherent_trait_method.rs  kubeclient.rs  lifetimes.rs  main.rs  manually_drop.rs  metadata.rs  mockall.rs  moka.rs  mut_bug.rs  mut_ref_vs_rc_refcell.rs  prost.rs  reborrow.rs  serde.rs  tokio_deadlock.rs  trait_upcast_coercion.rs  traits.rs  variance.rs  watch_file.rs
