[package]
name = "rust-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.48"
futures = "0.3.31"
kube = "3.0.0"
kube-runtime = "3.0.0"
k8s-openapi = { version = "0.26.0", default-features = false, features = ["latest"] }
log = "0.4.28"
simple_logger = { version = "5.0.0", features = ["threads"] }
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server", "test"] }
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl"] }
prost = "0.14.1"
moka = { version = "0.12.11", features = ["future"] }
axum = "0.8.4"
serde = { version = "1.0.227", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
notify = "8.2.0"
tempfile = "3.23.0"
anyhow = "1.0.100"
axum-macros = "0.5.0"
lazy_static = "1.5.0"
serde_json = "1.0.145"

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
mockall = "0.14.0"

[profile.release]
debug = true

[features]
default = ["f"]
f = []
